version/0.42/_sources/api/solver/_autosummary/settings/management.rst.txt
:orphan:

.. _management:

management
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.management
    :show-inheritance:

.. rubric:: Methods

========================================   ============================================================================================

Method                                                                                                                          Summary

========================================   ============================================================================================
:ref:`clear_model <clear_model>`                                                                     Initialize the model coefficients.

:ref:`export_model <export_model>`                                                   Write the model setting and coefficient to a file.

:ref:`import_model <import_model>`                                                 Read the model setting and coefficients from a file.

:ref:`validate_models <validate_models>`       Validate neural network models by running simulations and comparing objective functions.

========================================   ============================================================================================

.. rubric:: Included in:

========================   ============================

Parent                                          Summary

========================   ============================
:ref:`model_9 <model_9>`       Model management object.

========================   ============================

